Tue Sep 21 18:10:34 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/make/*:

          Updated to reflect my change from Fri Sep 17 11:25:48 UTC 2010.

        * run_tests.pl:

          Elaborated on the --coverage option.

Mon Sep 13 21:59:09 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * expected/mixed_languages/vc10/csharp/csharp.csproj:
        * expected/mixed_languages/vc8/csharp/csharp.csproj:
        * expected/mixed_languages/vc9/csharp/csharp.csproj:
        * expected/mixed_languages_refs/vc10/z/z.csproj:
        * expected/mixed_languages_refs/vc8/z/z.csproj:
        * expected/mixed_languages_refs/vc9/z/z.csproj:
        * expected/webapp/vc10/source/aly.csproj:
        * expected/webapp/vc10/source/cras.csproj:
        * expected/webapp/vc8/source/aly.csproj:
        * expected/webapp/vc8/source/cras.csproj:
        * expected/webapp/vc9/source/aly.csproj:
        * expected/webapp/vc9/source/cras.csproj:

          New test results based on latest vc8csharp.mpd changes.

Mon Sep 13 20:35:35 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * expected/*/gnuace/*:

          New test results based on latest gnu.mpd changes.

Wed Sep  1 18:58:43 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * expected/command_helper/gnuace/GNUmakefile.simple:
        * expected/custom_generates_custom/gnuace/src/GNUmakefile.src:
        * expected/features_custom_only/gnuace/source/GNUmakefile.fco:
        * expected/features_custom_only/gnuace/source/GNUmakefile.other:
        * expected/flex_bison/gnuace/GNUmakefile.flex_bison:
        * expected/grouping/gnuace/source/GNUmakefile.grouping_A:
        * expected/grouping/gnuace/source/GNUmakefile.grouping_B:
        * expected/grouping/gnuace/source/GNUmakefile.grouping_C:
        * expected/grouping/gnuace/source/GNUmakefile.grouping_D:
        * expected/grouping/gnuace/source/GNUmakefile.grouping_E:
        * expected/grouping/gnuace/source/GNUmakefile.grouping_F: