@@ -7,19 +7,25 @@
 # this file will be lost the next time it is generated.
 #
 # MPC Command:
-# /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include config -type make -recurse
+# /home/elliottc/current/MPC/mwc.pl -include config -type make -recurse
 #
 #----------------------------------------------------------------------------
 
 
-all: not_ghs-target
+all: good-target not_ghs-target
 
 clean depend generated realclean check-syntax $(CUSTOM_TARGETS):
+	@cd good && $(MAKE) -f Makefile.good $(@)
 	@cd not_ghs && $(MAKE) -f Makefile.not_ghs $(@)
+
+.PHONY: good-target
+good-target:
+	@cd good && $(MAKE) -f Makefile.good generated all
 
 .PHONY: not_ghs-target
 not_ghs-target:
 	@cd not_ghs && $(MAKE) -f Makefile.not_ghs generated all
 
 project_name_list:
+	@echo good-target
 	@echo not_ghs-target
